[gd_scene load_steps=2 format=3 uid="uid://c8x6s7f4q3k9"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frame"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0, 0, 0, 0)
corner_radius_all = 0
shadow_size = 0

[node name="Game" type="Node2D"]
script = ExtResource("1_script")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="Formation" type="Node2D" parent="."]
position = Vector2(640, 250)

[node name="ScreenFrame" type="Panel" parent="Formation"]
offset_left = -202.5
offset_top = -10.0
offset_right = 202.5
offset_bottom = 290.0
theme_override_styles/panel = SubResource("StyleBoxFlat_frame")

[node name="Content" type="Sprite2D" parent="Formation/ScreenFrame"]
position = Vector2(202.5, 150)
scale = Vector2(0.5, 0.5)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsContainer" type="HBoxContainer" parent="UILayer/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -120.0
offset_right = 500.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="SpinnersGrid" type="Control" parent="UILayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 250.0
grow_horizontal = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
